--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    # الخروج التلقائي إذا استمرت العملية أكثر من 40 دقيقة (لضمان عدم التعليق)
+    timeout-minutes: 40
     steps:
       - name: 🏗 Checkout repository
         uses: actions/checkout@v4
@@ -26,56 +28,31 @@ jobs:
 
       - name: 📦 Match Credentials & Prep
         run: |
+          # أمر الخروج الفوري في حال فشل أي سطر برمجي
+          set -e
           cd mobile
+          
           echo "legacy-peer-deps=true" > .npmrc
           
-          # 1. إنشاء eas.json (لحل مشكلة التعليق في المحاولة 386)
-          echo '{
-            "build": {
-              "preview": {
-                "android": {
-                  "buildType": "apk",
-                  "image": "latest"
-                },
-                "channel": "preview"
-              }
-            }
-          }' > eas.json
+          # 1. إنشاء eas.json (حل مشكلة التعليق وتثبيت القناة)
+          echo '{"build": {"preview": {"android": {"buildType": "apk", "image": "latest"}, "channel": "preview"}}}' > eas.json
 
-          # 2. إنشاء app.json (لعلاج نقص sdkVersion الظاهر في 10 صور على الأقل)
-          echo '{
-            "expo": {
-              "name": "Oasis",
-              "slug": "oasis-app",
-              "version": "1.0.0",
-              "owner": "aboahj",
-              "android": {
-                "package": "com.aboahj.oasisapp",
-                "compileSdkVersion": 34,
-                "targetSdkVersion": 34,
-                "buildToolsVersion": "34.0.0"
-              },
-              "extra": {
-                "eas": { "projectId": "742d678c-90bd-4cf1-b261-604691b3cf53" }
-              }
-            }
-          }' > app.json
+          # 2. إنشاء app.json (حل جذري لنقص compileSdkVersion)
+          echo '{"expo": {"name": "Oasis", "slug": "oasis-app", "version": "1.0.0", "owner": "aboahj", "android": {"package": "com.aboahj.oasisapp", "compileSdkVersion": 34, "targetSdkVersion": 34, "buildToolsVersion": "34.0.0"}, "extra": {"eas": {"projectId": "742d678c-90bd-4cf1-b261-604691b3cf53"}}}}' > app.json
           
           npm pkg delete type
           npm install --legacy-peer-deps
 
-          # 3. توليد ملفات الأندرويد (Prebuild) لضمان وجود مسار android/build.gradle
+          # 3. توليد ملفات الأندرويد (Prebuild) لضمان وجود المسارات
           npx expo prebuild --platform android --no-install
 
-          # 4. [تصحيح خطأ الصورة 1000079246]: الحقن المتوافق مع Gradle 8.3
-          # استخدمنا "=" و "compileSdk" ليتناسب مع متطلبات السطر 16 في سجلاتك
+          # 4. تصحيح Gradle 8.3 (الحقن المتوافق مع سطر 16 في سجلاتك)
           find android -name "build.gradle" -exec sed -i '/android {/a \    namespace = "com.oasis.app"\n    compileSdk = 34\n    targetSdk = 34' {} + || true
           
-          # 5. معالجة كافة مكتبات node_modules (لحل أخطاء Evaluating project :expo)
-          # هذا السطر يبحث عن أي ملف gradle في المكتبات ويحقن فيه الإعدادات الناقصة
+          # 5. معالجة كافة مكتبات node_modules (لحل أخطاء Evaluating project)
           find node_modules -name "*.gradle" -exec sed -i '/android {/a \    namespace = "com.oasis.app"\n    compileSdk = 34' {} + || true
 
-          # 6. تصحيح مراجع Kotlin و ZegoCloud (علاج أخطاء التوافقية)
+          # 6. تصحيح مراجع Kotlin و ZegoCloud
           find node_modules -name "*.gradle" -exec sed -i 's/extensions.extraProperties/project.ext/g' {} + || true
           find node_modules -name "*.kts" -exec sed -i 's/extensions.extraProperties/project.ext/g' {} + || true
           find node_modules -name "AndroidManifest.xml" -exec sed -i 's/package="com.zegouikitrebuiltcallrn"/ /g' {} + || true
@@ -83,5 +60,5 @@ jobs:
       - name: 🚀 Build APK (Final Fix & Clear Cache)
         run: |
           cd mobile
-          # التنظيف ضروري جداً لأن صورك أظهرت بقاء ملفات من محاولات فاشلة
+          # التنظيف والتشغيل غير التفاعلي لضمان الخروج بنتيجة (نجاح أو فشل صريح)
           npx eas-cli build --platform android --profile preview --non-interactive --clear-cache
