--- a/mobile/package.json
+++ b/mobile/package.json
@@ -30,7 +30,8 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "react-native-get-random-values": "~1.10.0",
     "expo-notifications": "~0.27.6",
-    "react-native-crypto-js": "^1.0.0"
+    "react-native-crypto-js": "^1.0.0",
+    "react-native-startapp-ads": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
